--- a/angular-js-directive-demos-master/megavideo-with-controller/bower.json
+++ b/angular-js-directive-demos-master/megavideo-with-controller/bower.json
@@ -19,6 +19,8 @@
   ],
   "dependencies": {
     "angular": "~1.3.16",
-    "angular-mocks": "~1.3.16"
+    "angular-mocks": "~1.3.16",
+    "jquery":"",
+    "jquery-ui":""
   }
 }
